--- a/package.json
+++ b/package.json
@@ -27,34 +27,26 @@
     "npm": ">=2.1.5"
   },
   "devDependencies": {
-    "asset-builder": "^1.1.0",
-    "babel-preset-es2015": "^6.6.0",
-    "browser-sync": "^2.8.2",
-    "del": "^1.2.1",
+    "browser-sync": "^2.9.3",
+    "del": "^2.0.2",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-changed": "^1.3.0",
+    "gulp-autoprefixer": "^3.0.1",
+    "gulp-bless": "^3.0.1",
+    "gulp-cache": "^0.3.0",
     "gulp-concat": "^2.6.0",
-    "gulp-flatten": "0.1.1",
-    "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "^1.11.2",
-    "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.2.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-rev": "^6.0.0",
-    "gulp-sass": "^2.1.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
-    "imagemin-pngcrush": "^4.1.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sftp": "^0.1.5",
+    "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.7",
+    "gulp-sourcemaps": "^1.6.0",
     "jshint-stylish": "^2.0.1",
-    "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.0",
-    "minimist": "^1.1.3",
-    "run-sequence": "^1.1.2",
-    "traverse": "^0.6.6",
-    "wiredep": "^2.2.2"
+    "wiredep": "^3.0.0-beta"
   }
 }
