--- a/bower.json
+++ b/bower.json
@@ -7,17 +7,49 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "foundation-sites": "~6.2"
+    "modernizr": "2.8.2",
+    "foundation": "~5.5.2",
+    "flexslider": "~2.5.0",
+    "picturefill": "~2.3.1"
   },
   "overrides": {
-    "foundation-sites": {
+    "modernizr": {
+      "main": "./modernizr.js"
+    },
+    "foundation": {
       "main": [
-
-        "./scss/foundation.scss",
-
-        "./dist/foundation.js"
-
+        "../fastclick/lib/fastclick.js",
+        "./js/foundation/foundation.js",
+        "./js/foundation/foundation.abide.js",
+        "./js/foundation/foundation.accordion.js",
+        "./js/foundation/foundation.alert.js",
+        "./js/foundation/foundation.clearing.js",
+        "./js/foundation/foundation.dropdown.js",
+        "./js/foundation/foundation.equalizer.js",
+        "./js/foundation/foundation.interchange.js",
+        "./js/foundation/foundation.joyride.js",
+        "./js/foundation/foundation.magellan.js",
+        "./js/foundation/foundation.offcanvas.js",
+        "./js/foundation/foundation.orbit.js",
+        "./js/foundation/foundation.reveal.js",
+        "./js/foundation/foundation.slider.js",
+        "./js/foundation/foundation.tab.js",
+        "./js/foundation/foundation.tooltip.js",
+        "./js/foundation/foundation.topbar.js"
+      ]
+    },
+    "flexslider": {
+      "main": [
+        "jquery.flexslider.js",
+        "./demo/js/shCore.js",
+        "./demo/js/shBrushXml.js",
+        "./demo/js/shBrushJScript.js",
+        "./fonts/*"
       ]
     }
+  },
+  "devDependencies": {
+    "mediaelement": "~2.20.1",
+    "isotope": "~2.2.2"
   }
 }
