--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "jshint-stylish": "^2.0.1",
     "merge-stream": "^1.0.0",
     "wiredep": "^3.0.0-beta"
+  },
+  "dependencies": {
+    "node-sass": "^3.4.2"
   }
 }
