--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,10 @@
     "modernizr": "2.8.2",
     "foundation": "~5.5.2",
     "flexslider": "~2.5.0",
-    "picturefill": "~2.3.1"
+    "picturefill": "~2.3.1",
+    "moment": "~2.13.0",
+    "malihu-custom-scrollbar-plugin": "~3.1.3",
+    "font-awesome": "~4.6.3"
   },
   "overrides": {
     "modernizr": {
